# fastapi_web_server

./: .gitignore  example.env  main.py  pyproject.toml  run.ps1
app/api/: depends.py
app/api/routers/: audio.py
app/src/: data_extraction.py  exception.py
src/audio_spoof_detection_service/api/: auth.py  depends.py  exception_handler.py  main.py
src/audio_spoof_detection_service/api/routers/: audio.py  root.py  user.py
src/audio_spoof_detection_service/api/schemas/: audio.py  root.py  user.py
src/audio_spoof_detection_service/application/business_rules/: audio.py
src/audio_spoof_detection_service/application/common/: interactor.py
src/audio_spoof_detection_service/application/contracts/: audio.py  user.py
src/audio_spoof_detection_service/application/protocols/database_gateways/: audio_gateway.py  user_gateway.py
src/audio_spoof_detection_service/application/protocols/neural_model_gateways/: cnn.py
src/audio_spoof_detection_service/application/protocols/providers/: token_provider.py
src/audio_spoof_detection_service/application/usecases/: audio.py  user.py
src/audio_spoof_detection_service/domain/: error.py  types_and_consts.py
src/audio_spoof_detection_service/domain/common/: business_rule.py
src/audio_spoof_detection_service/domain/entities/: audio.py  user.py
src/audio_spoof_detection_service/infrastructure/: ioc.py  orm.py  settings.py
src/audio_spoof_detection_service/infrastructure/providers/: token_provider.py
src/scripts/: migrate.sql  run_cnn_model_training_script.py
(+8 files in other folders)
